--- a/trunk/x86/vsd_win32/vsd_win32/vsd_gui.rc
+++ b/trunk/x86/vsd_win32/vsd_win32/vsd_gui.rc
@@ -1,7 +1,7 @@
 /*
 $Id$
 
-Virtual Section Dumper v1.0 x86
+Virtual Section Dumper v2.0 x86
 
 Copyright (C) 2012 +NCR/CRC! [ReVeRsEr] http://crackinglandia.blogspot.com
 
@@ -32,8 +32,57 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
 //
+// Menu resources
+//
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDR_MENUBAR MENU
+{
+    POPUP "&File"
+    {
+        MENUITEM "E&xit", IDM_EXIT1
+    }
+    POPUP "&View"
+    {
+        MENUITEM "&Handles", IDM_HANDLES1
+        MENUITEM "&Modules", IDM_MODULES1
+        MENUITEM "&Threads", IDM_THREADS1
+    }
+    POPUP "&Help"
+    {
+        MENUITEM "&About", IDM_ABOUT1
+    }
+}
+
+
+
+//
 // Dialog resources
 //
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+HANDLESDLG DIALOG 0, 0, 349, 170
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "Handles"
+FONT 8, "Ms Shell Dlg"
+{
+    DEFPUSHBUTTON   "Close", IDOK, 295, 153, 50, 14
+    CONTROL         "", HANDLESLV, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 4, 4, 341, 146
+}
+
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+MODULESDLG DIALOG 0, 0, 404, 196
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "Loaded modules"
+FONT 8, "Ms Shell Dlg"
+{
+    DEFPUSHBUTTON   "Close", IDOK, 350, 179, 50, 14
+    CONTROL         "", MODULESLV, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 4, 5, 396, 172
+    LTEXT           "", TOTAL_MODULES, 4, 181, 66, 12, SS_LEFT | SS_SUNKEN
+}
+
+
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 PARTIALDUMP DIALOGEX 0, 0, 174, 59
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
@@ -48,6 +97,29 @@ FONT 8, "Ms Shell Dlg", 400, 0, 1
     EDITTEXT        DPADDRESSEDIT, 41, 16, 63, 14, ES_CENTER | ES_AUTOHSCROLL | ES_UPPERCASE
     EDITTEXT        DPSIZEEDIT, 41, 31, 63, 14, ES_CENTER | ES_AUTOHSCROLL | ES_UPPERCASE
     DEFPUSHBUTTON   "OK", DUMP_PARTIAL_REGION, 120, 7, 50, 14
+}
+
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+PATCHPROCESSDLG DIALOG 0, 0, 315, 100
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "Patch process"
+FONT 8, "Ms Shell Dlg"
+{
+    DEFPUSHBUTTON   "Patch", IDOK, 208, 82, 50, 14
+    PUSHBUTTON      "Close", IDCANCEL, 259, 82, 50, 14
+    LTEXT           "No. of Bytes to patch", IDC_STATIC, 14, 18, 70, 8, SS_LEFT
+    EDITTEXT        NRO_BYTES2PATCH, 87, 17, 40, 14, ES_CENTER | ES_AUTOHSCROLL
+    CONTROL         "", SPIN_NRO_BYTES, UPDOWN_CLASS, UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 128, 17, 11, 14
+    LTEXT           "Address to patch:", IDC_STATIC, 13, 39, 56, 8, SS_LEFT
+    EDITTEXT        EDT_ADDRESS2PATCH, 87, 36, 64, 14, ES_CENTER | ES_AUTOHSCROLL | ES_UPPERCASE
+    GROUPBOX        "Static", IDC_STATIC, 5, 4, 305, 75
+    LTEXT           "Bytes", IDC_STATIC, 225, 27, 18, 8, SS_LEFT
+    EDITTEXT        EDT_ORIGINALBYTES, 165, 37, 140, 14, ES_CENTER | ES_AUTOHSCROLL | ES_UPPERCASE | ES_READONLY
+    LTEXT           "New bytes:", IDC_STATIC, 13, 60, 36, 8, SS_LEFT
+    EDITTEXT        EDT_NEWBYTES, 87, 57, 218, 14, ES_AUTOHSCROLL | ES_UPPERCASE
+    PUSHBUTTON      "Search", BT_SEARCH_BYTES, 6, 82, 50, 14
 }
 
 
@@ -72,9 +144,26 @@ FONT 8, "Ms Shell Dlg"
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+THREADSDLG DIALOG 0, 0, 359, 160
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+CAPTION "Threads"
+FONT 8, "Ms Shell Dlg"
+{
+    DEFPUSHBUTTON   "Close", IDOK, 304, 143, 50, 14
+    PUSHBUTTON      "Resume", BT_RESUME_THREAD, 4, 143, 50, 14
+    PUSHBUTTON      "Suspend", BT_SUSPEND_THREAD, 56, 143, 50, 14
+    PUSHBUTTON      "Terminate", BT_TERMINATE_THREAD, 107, 143, 50, 14
+    PUSHBUTTON      "Refresh", BT_REFRESH_THREADSLV, 252, 143, 50, 14
+    CONTROL         "", THREADSLV, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 3, 3, 351, 135
+}
+
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 VSDDLG DIALOG 0, 0, 361, 218
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Virtual Section Dumper v1.0 x86"
+CAPTION "Virtual Section Dumper v2.0 x86"
+MENU IDR_MENUBAR
 FONT 8, "Ms Shell Dlg"
 {
     CONTROL         "", LV_PROCESSES, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 9, 9, 346, 178
@@ -101,8 +190,8 @@ LIST_ICON          ICON           ".\\list.ico"
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 1 VERSIONINFO
-    FILEVERSION     1,0,0,0
-    PRODUCTVERSION  1,0,0,0
+    FILEVERSION     2,0,0,0
+    PRODUCTVERSION  2,0,0,0
     FILEOS          VOS__WINDOWS32
     FILETYPE        VFT_APP
     FILESUBTYPE     VFT2_UNKNOWN
@@ -115,12 +204,12 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
         {
             VALUE "CompanyName", "Crackinglandia"
             VALUE "FileDescription", "Virtual Section Dumper"
-            VALUE "FileVersion", "1, 0, 0, 0"
+            VALUE "FileVersion", "2, 2, 0, 0"
             VALUE "InternalName", "vsd_win32.exe"
             VALUE "LegalCopyright", "©2011 +NCR/CRC! [ReVeRsEr]"
             VALUE "OriginalFilename", "vsd_win32.exe"
             VALUE "ProductName", "Virtual Section Dumper x86"
-            VALUE "ProductVersion", "1, 0, 0, 0"
+            VALUE "ProductVersion", "2, 2, 0, 0"
         }
     }
     BLOCK "VarFileInfo"
