* ticket #8. Now, we can set the priority of a process. * working on #10.

--- a/branches/v2.1-x86/vsd_win32/vsd_win32/vsd_win32.vcxproj
+++ b/branches/v2.1-x86/vsd_win32/vsd_win32/vsd_win32.vcxproj
@@ -113,6 +113,7 @@
     <ResourceCompile Include="vsd_gui.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="TODO.txt" />
     <None Include="vsd_win32.manifest.xml">
       <SubType>Designer</SubType>
     </None>
