--- a/branches/v2.1-x86/vsd_win32/vsd_win32/vsd_win32.vcxproj.filters
+++ b/branches/v2.1-x86/vsd_win32/vsd_win32/vsd_win32.vcxproj.filters
@@ -42,5 +42,8 @@
     <None Include="vsd_win32.manifest.xml">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="TODO.txt">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
