--- a/vsd_win32/vsd_win32/vsd_win32.vcxproj
+++ b/vsd_win32/vsd_win32/vsd_win32.vcxproj
@@ -113,6 +113,7 @@
     <ResourceCompile Include="vsd_gui.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="TODO.txt" />
     <None Include="vsd_win32.manifest.xml">
       <SubType>Designer</SubType>
     </None>
